--- a/dest/styles/main.css
+++ b/dest/styles/main.css
@@ -193,7 +193,7 @@ a,button {
 a {
   transition: .2s;
   text-decoration: none;
-  color: #030A1B;
+  color: #461510;
 }
 
 body {
@@ -658,6 +658,57 @@ img {
   margin: 0;
 }
 
+.input--number.hide {
+  display: none;
+}
+
+.input--number-bg {
+  min-width: 1px;
+  max-width: 100%;
+  height: 48px;
+  width: 100%;
+}
+
+.input--number-bg .input__number {
+  color: #fff;
+  font-size: 10px;
+  background: rgba(70, 21, 16, 0.6);
+  justify-content: space-between;
+  align-items: center;
+  min-height: 48px;
+  padding: 0;
+  background: transparent;
+  min-width: 1px;
+  width: auto;
+}
+
+.input--number-bg .input__number-down,.input--number-bg .input__number-up {
+  color: #fff;
+  background: rgba(70, 21, 16, 0.6);
+  border-radius: 0;
+  border: none;
+  width: 48px;
+  height: 48px;
+  min-width: 48px;
+  line-height: 46px;
+}
+
+.input--number-bg .input__number-desc {
+  background: rgba(70, 21, 16, 0.6);
+  color: #fff;
+  width: 100%;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1;
+  letter-spacing: 0.045em;
+  text-transform: uppercase;
+  min-height: 48px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .input__number {
   color: #461510;
   font-weight: 400;
@@ -702,6 +753,13 @@ img {
 .input__number-down:hover,.input__number-up:hover {
   color: #fff;
   background: rgba(70, 21, 16, 0.6);
+}
+
+.input__number-desc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
 }
 
 textarea.input__elem {
@@ -1728,6 +1786,23 @@ select.input__elem option[disabled] {
   margin: 0;
 }
 
+.product-add-panel {
+  background: #826562;
+  padding: 6px 0;
+  text-align: center;
+  margin: -24px -20px 32px;
+}
+
+.product-add-panel h5 {
+  color: #FAF6F2;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.3;
+  letter-spacing: 0.045em;
+  text-transform: uppercase;
+  margin: 0;
+}
+
 .filter__categories {
   position: fixed;
   top: 210px;
@@ -2394,6 +2469,97 @@ select.input__elem option[disabled] {
   text-align: left;
 }
 
+.error-404 {
+  position: relative;
+  min-height: calc(100vh - 80px);
+  margin: -24px 0 0;
+  display: flex;
+  align-items: center;
+}
+
+.error-404__main {
+  width: 100%;
+}
+
+.error-404__row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.error-404__gallery {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.error-404__gallery-item {
+  position: absolute;
+  width: 20%;
+}
+
+.error-404__gallery-item-img--wrap {
+  position: relative;
+}
+
+.error-404__gallery-item-img--wrap:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.error-404__gallery-item:nth-child(1) .error-404__gallery-item-img--wrap:after {
+  background: linear-gradient(0deg, rgba(250, 246, 242, .8), rgba(250, 246, 242, .8));
+}
+
+.error-404__gallery-item:nth-child(2) .error-404__gallery-item-img--wrap:after {
+  background: linear-gradient(0deg, rgba(250, 246, 242, .5), rgba(250, 246, 242, .5));
+}
+
+.error-404__gallery-item:nth-child(3) .error-404__gallery-item-img--wrap:after {
+  background: linear-gradient(0deg, rgba(250, 246, 242, .25), rgba(250, 246, 242, .25));
+}
+
+.error-404__gallery-item:nth-child(4) {
+  z-index: 4;
+}
+
+.error-404__gallery-item:nth-child(4) .error-404__gallery-item-img--wrap:after {
+  display: none;
+}
+
+.error-404__desc {
+  color: rgba(70, 21, 16, 0.6);
+  font-weight: 300;
+  font-size: 200px;
+  line-height: 1.3;
+  letter-spacing: -0.025em;
+}
+
+.error-404__warning {
+  color: #461510;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  max-width: 430px;
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+}
+
+.error-404__warning a {
+  text-decoration: underline;
+}
+
+.error-404__warning a:hover {
+  text-decoration: none;
+}
+
 .footer {
   margin: 100px 0 0;
   padding: 0 0 16px;
@@ -2566,6 +2732,12 @@ select.input__elem option[disabled] {
     padding: 40px;
   }
 
+  .product-add-panel {
+    margin-top: -40px;
+    margin-right: -40px;
+    margin-left: -40px;
+  }
+
   .filter__categories {
     top: 260px;
     padding-right: 40px;
@@ -2582,6 +2754,15 @@ select.input__elem option[disabled] {
 
   .feedback__form .form__send {
     width: 210px;
+  }
+
+  .error-404 {
+    min-height: calc(100vh - 112px);
+    margin: -40px 0 0;
+  }
+
+  .error-404__warning {
+    bottom: 40px;
   }
 }
 
@@ -2837,6 +3018,10 @@ select.input__elem option[disabled] {
 
   .product-card__gallery-item {
     margin: 0 0 20px;
+  }
+
+  .product-add-panel {
+    padding: 12px 0;
   }
 
   .filter__categories {
@@ -3127,6 +3312,14 @@ select.input__elem option[disabled] {
     width: 60%;
   }
 
+  .error-404__desc {
+    font-size: 177px;
+  }
+
+  .error-404__warning {
+    font-size: 16px;
+  }
+
   .footer {
     padding: 0 0 28px;
   }
@@ -3217,6 +3410,19 @@ select.input__elem option[disabled] {
     min-width: 144px;
     max-width: 144px;
     height: 40px;
+  }
+
+  .input--number-bg {
+    min-width: 1px;
+    max-width: 100%;
+  }
+
+  .input--number-bg .input__number {
+    font-size: 12px;
+  }
+
+  .input--number-bg .input__number-desc {
+    font-size: 12px;
   }
 
   .input__number {
@@ -3382,6 +3588,11 @@ select.input__elem option[disabled] {
     width: 42%;
   }
 
+  .product-add-panel {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
   .filter__categories {
     margin: 0 0 64px;
   }
@@ -3541,6 +3752,15 @@ select.input__elem option[disabled] {
     font-size: 18px;
   }
 
+  .error-404__desc {
+    font-size: 250px;
+  }
+
+  .error-404__warning {
+    font-size: 18px;
+    bottom: 60px;
+  }
+
   .footer {
     margin: 200px 0 0;
     padding: 0 0 32px;
@@ -3633,6 +3853,29 @@ select.input__elem option[disabled] {
     min-width: 172px;
     max-width: 172px;
     height: 52px;
+  }
+
+  .input--number-bg {
+    min-width: 1px;
+    max-width: 100%;
+    height: 62px;
+  }
+
+  .input--number-bg .input__number {
+    font-size: 14px;
+    min-height: 62px;
+  }
+
+  .input--number-bg .input__number-down,.input--number-bg .input__number-up {
+    width: 62px;
+    height: 62px;
+    min-width: 62px;
+    line-height: 60px;
+  }
+
+  .input--number-bg .input__number-desc {
+    font-size: 14px;
+    min-height: 62px;
   }
 
   .input__number {
@@ -3813,6 +4056,10 @@ select.input__elem option[disabled] {
     width: 60%;
   }
 
+  .product-add-panel {
+    margin-top: -70px;
+  }
+
   .filter__categories-link {
     font-size: 14px;
   }
@@ -3932,6 +4179,19 @@ select.input__elem option[disabled] {
 
   .text-block .accordion {
     width: 100%;
+  }
+
+  .error-404 {
+    min-height: calc(100vh - 160px);
+    margin: -70px 0 0;
+  }
+
+  .error-404__desc {
+    font-size: 274px;
+  }
+
+  .error-404__warning {
+    font-size: 20px;
   }
 
   .footer__title {
