--- a/app/styles/blocks/product-card.sass
+++ b/app/styles/blocks/product-card.sass
@@ -101,3 +101,14 @@
 
             &:last-child
                 margin: 0
+
+.product-add-panel
+    background: #826562
+    padding: 6px 0 @md 12px 0
+    text-align: center
+    margin: -24px -20px 32px @sm -40px -40px * @lg * 0 * @xl -70px * *
+
+    h5
+        text: #FAF6F2 400 10px 1.3 0.045em
+        text-transform: uppercase
+        margin: 0
