--- a/app/styles/inc/form.sass
+++ b/app/styles/inc/form.sass
@@ -131,6 +131,46 @@
     display: flex
     margin: 0
 
+    &.hide
+      display: none
+
+    &-bg
+      min-width: 1px @lg 1px @xl 1px
+      max-width: 100% @lg 100% @xl 100%
+      height: 48px @xl 62px
+      width: 100%
+
+      ^^&__number
+        color: #fff
+        text: 10px @lg 12px @xl 14px
+        background: rgba(70, 21, 16, 0.6)
+        justify-content: space-between
+        align-items: center
+        min-height: 48px @xl 62px
+        padding: 0
+        background: transparent
+        min-width: 1px
+        width: auto
+        
+        &-up,
+        &-down
+          color: #fff
+          background: rgba(70, 21, 16, 0.6)
+          border-radius: 0
+          border: none
+          size: 48px @xl 62px
+          min-width: 48px @xl 62px
+          line-height: 46px @xl 60px
+
+        &-desc
+          background: rgba(70, 21, 16, 0.6)
+          color: #fff
+          width: 100%
+          text: 400 10px 1 0.045em @lg 12px @xl 14px
+          text-transform: uppercase
+          min-height: 48px @xl 62px
+          user-select: none
+
   &__number
     text: #461510 400 18px 1.3 @lg 24px
     -moz-appearance: textfield
@@ -164,6 +204,12 @@
       &:hover
         color: #fff
         background: rgba(70, 21, 16, 0.6)
+
+    &-desc
+      display: flex
+      justify-content: center
+      align-items: center
+      white-space: nowrap
 
 textarea.input__elem
   min-height: 48px
